--- a/Nodejs-master/package.json
+++ b/Nodejs-master/package.json
@@ -24,7 +24,9 @@
     "compression": "^1.7.4",
     "cookie": "^0.4.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.3.1",
-    "sanitize-html": "^1.27.5"
+    "sanitize-html": "^1.27.5",
+    "session-file-store": "^1.5.0"
   }
 }
