--- a/tsFirebase/functions/package.json
+++ b/tsFirebase/functions/package.json
@@ -14,6 +14,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/multer": "^1.4.5",
+    "dateformat": "^4.5.1",
+    "express-multipart-file-parser": "^0.1.2",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
@@ -25,6 +28,7 @@
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
     "jest": "^26.6.3",
+    "multer": "^1.4.2",
     "typescript": "^3.8.0"
   },
   "private": true
